# kaggle_spotify_raw_ingestion_and_stage

./: .gitignore
kaggle_spotify_songs/: README.md  pyproject.toml
kaggle_spotify_songs/chatgpt_pipeline/: exploration.ipynb  raw_ingestion.py  songs_exploration.sql  stage.py  test.html
kaggle_spotify_songs/tests/: test_ingestion_script.py
