[tool.poetry]
name = "chatgpt-pipeline"
version = "0.1.0"
description = ""
authors = ["Jasmine 💗 <jasmine.tw1127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
pyspark = "^3.5.5"
ydata-profiling = "^4.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
